Inclusao da lib cliente do gsan-relatorios e exclusao da dependencia das classes sun